--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
+  "type": "module",
   "version": "1.0.0",
   "description": "Backend for the Shiksha platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Darshan Odedara",
   "license": "ISC",
