--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "tailwind-motion": "^0.0.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
